# flood-sim

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  diffusion.ipynb  poisson_jacobi.ipynb  wave_eq.ipynb
src/: main.rs  render.wgsl  shader.wgsl
