[package]
name = "dnapl-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.62" 
web-sys = "0.3.53"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
pollster = "0.3.0"
nannou = { version = "0.18.1", features = ["spirv"] }
async-std = "1.12.0"
nannou_wgpu = { version = "0.18.0", features = ["spirv"] }

[profile.dev.package."*"]
opt-level = 3# 
